--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,22 +4,20 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 
 # JPA
-spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # SPRING INTERNATIONALIZATION
 spring.messages.basename=i18n/messages
 
-# THYMELEAF
-spring.thymeleaf.cache: false
+# SPRING PROFILES
+spring.profiles.active=@activatedProfile@
+
+multipart.maxFileSize= 10MB
+multipart.maxRequestSize = 20MB
 
 # LOGGING
 #logging.file=c:/ecm.log
 logging.level.org.apache.juli.logging.DirectJDKLog = ERROR
-logging.level.*=INFO
 logging.config=classpath:log4j.properties
 logging.level.org.thymeleaf.* ERROR
+
