--- a/src/main/resources/mail.properties
+++ b/src/main/resources/mail.properties
@@ -1,12 +1,14 @@
 # E-MAIL
-mail.host=localhost
-mail.port=25
+#mail.host=localhost
+#mail.port=25
+mail.host=smtp.3di.it
+mail.port=587
 mail.protocol=smtp
 
-mail.smtp.auth=false
-mail.smtp.starttls.enable=false
+mail.smtp.auth=true
+mail.smtp.starttls.enable=true
 mail.from=me@localhost
 
-mail.username=
-mail.password=
+mail.username=dpranteda@3di.it
+mail.password=pa$$w0rd
 
