--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,17 @@
+# DATASOURCE
+spring.datasource.url= jdbc:postgresql://localhost:5432/ecmTestDB
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+
 # JPA
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # THYMELEAF
 spring.thymeleaf.cache: true
+
+# LOGGING
+#logging.file=c:/ecm.log
+logging.level.org.apache.juli.logging.DirectJDKLog = ERROR
+logging.config=classpath:log4j.properties
+logging.level.org.thymeleaf.* ERROR
