--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,14 @@
-# DATASOURCE
-spring.datasource.url= jdbc:postgresql://localhost:5432/ecmTestDB
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-
 # JPA
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=none
 
 # SPRING INTERNATIONALIZATION
 spring.messages.basename=i18n/messages
 
 # SPRING PROFILES
 spring.profiles.active=@activatedProfile@
+
+# Liquibase
+liquibase.change-log=classpath:liquibase/master-changeLog.xml
 
 multipart.maxFileSize= 10MB
 multipart.maxRequestSize = 20MB
