--- a/src/main/resources/mail.properties
+++ b/src/main/resources/mail.properties
@@ -1,14 +1,13 @@
 # E-MAIL
 #mail.host=localhost
 #mail.port=25
-mail.host=smtp.3di.it
-mail.port=587
+mail.host=dns3.bo.priv
+mail.port=25
 mail.protocol=smtp
 
-mail.smtp.auth=true
-mail.smtp.starttls.enable=true
-mail.from=me@localhost
+mail.smtp.auth=false
+mail.smtp.starttls.enable=false
+mail.from=me@bo.prov
 
-mail.username=dpranteda@3di.it
-mail.password=pa$$w0rd
-
+mail.username=
+mail.password=
