--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,11 @@
-# JPA
-spring.jpa.hibernate.ddl-auto=update
+# DATASOURCE
+spring.datasource.url= jdbc:postgresql://localhost:5432/ecmTestDB
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 
+# JPA
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
