--- a/.classpath
+++ b/.classpath
@@ -33,5 +33,6 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="src/main/java/it/tredi/ecm/dao/entity/Role.java"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
