--- a/src/main/resources/liquibase/liquibase.properties
+++ b/src/main/resources/liquibase/liquibase.properties
@@ -1,10 +1,10 @@
 changeLogFile=src/main/resources/liquibase/master-changeLog.xml
 driver=org.postgresql.Driver
-#Database da controllare valutare i diff quando si lancia il comando per generare i files da mettere nel master-changelog.xml
-url=jdbc:postgresql://localhost/ecmLiquibaseTest
+#Database da controllare per realizzare i diff quando si lancia il comando per generare i files da mettere nel master-changelog.xml
+url=jdbc:postgresql://localhost/test
 defaultSchemaName=
-username=postgres
-password=postgres
+username=ecm
+password=3dinformatica
 #definire nell'ordine:
 #package che contiene le entity
 #package che contiene i converters,....
