--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,11 @@
 			<groupId>org.liquibase</groupId>
 			<artifactId>liquibase-core</artifactId>
 		</dependency -->
+		<dependency>
+			<groupId>it.tredi</groupId>
+			<artifactId>springdatautil</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
