SedeWrappper testato Ripristinato server smtp

--- a/src/main/resources/mail.properties
+++ b/src/main/resources/mail.properties
@@ -1,8 +1,8 @@
 # E-MAIL
 #mail.host=localhost
 #mail.port=25
-mail.host=localhost
-mail.port=2525
+mail.host=dns3.bo.priv
+mail.port=25
 mail.protocol=smtp
 
 mail.smtp.auth=false
