Integrazione con liquibase.
E' Necessario far creare a liquibase il database la prima volta. Il
changelog è stato creato per creare lo schema da un Db vuoto. All'avvio
vengono creati 2 account.

--- a/src/main/resources/liquibase/liquibase.properties
+++ b/src/main/resources/liquibase/liquibase.properties
@@ -1,7 +1,7 @@
 changeLogFile=src/main/resources/liquibase/master-changeLog.xml
 driver=org.postgresql.Driver
 #Database da controllare per realizzare i diff quando si lancia il comando per generare i files da mettere nel master-changelog.xml
-url=jdbc:postgresql://localhost/test
+url=jdbc:postgresql://localhost/ecmTestDB
 defaultSchemaName=
 username=ecm
 password=3dinformatica
@@ -9,6 +9,7 @@ password=3dinformatica
 #package che contiene le entity
 #package che contiene i converters,....
 #dialect da utilizzare
-referenceUrl=hibernate:spring:it.tredi.ecm.dao.entity,it.tredi.ecm.dao.enumlist,it.tredi.springdatautil?dialect=org.hibernate.dialect.PostgreSQLDialect
+#referenceUrl=hibernate:spring:it.tredi.ecm.dao.entity,it.tredi.ecm.dao.enumlist,it.tredi.springdatautil?dialect=org.hibernate.dialect.PostgreSQLDialect&hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
+referenceUrl=hibernate:spring:it.tredi.ecm.dao.entity,it.tredi.ecm.dao.enumlist,it.tredi.springdatautil?dialect=org.hibernate.dialect.PostgreSQLDialect&hibernate.ejb.naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringNamingStrategy
 verbose=true
 logging=debug
