--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,10 +1,10 @@
 # DATASOURCE
 spring.datasource.url= jdbc:postgresql://localhost:5432/ecmTestDB
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.username=ecm
+spring.datasource.password=3dinformatica
 
 # JPA
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
