--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,18 @@
 # JPA
 spring.jpa.hibernate.ddl-auto=none
 
+#DEFAULT
+#spring.jpa.hibernate.naming-strategy=org.springframework.boot.orm.jpa.hibernate.SpringNamingStrategy
+
+#CASE SENSITIVE però la conversione a basso livelo su postgres sbaglia select account."changePassword" -> account.changePassword
+#spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.DefaultNamingStrategy
+
+
 # SPRING INTERNATIONALIZATION
 spring.messages.basename=i18n/messages
 
 # SPRING PROFILES
-spring.profiles.active=@activatedProfile@
+spring.profiles.active=@spring.profile@
 
 # Liquibase
 liquibase.change-log=classpath:liquibase/master-changeLog.xml
