Disabilitato momentaneamente liquibase e ripristinato ddl-update

--- a/src/main/resources/mail.properties
+++ b/src/main/resources/mail.properties
@@ -1,7 +1,6 @@
 # E-MAIL
-#mail.host=localhost
-#mail.port=25
-mail.host=dns3.bo.priv
+mail.host=localhost
+#mail.host=dns3.bo.priv
 mail.port=25
 mail.protocol=smtp
 
