--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,8 +1,9 @@
 # Root logger option
 log4j.rootLogger=INFO, file, stdout
 
+log4j.appender.file.File=c:\\pippo.log
 log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.MaxFileSize=5120KB
+log4j.appender.file.MaxFileSize=10240KB
 log4j.appender.file.MaxBackupIndex=5
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d [%t] %5p - %m%n
@@ -17,9 +18,7 @@ log4j.appender.stdout.layout.ConversionPattern=%d{HH:mm:ss.SSS} [%t] - %5p - %C{
 log4j.logger.org.thymeleaf=DEBUG
 log4j.logger.org.thymeleaf.TemplateEngine.CONFIG=DEBUG
 log4j.logger.org.thymeleaf.TemplateEngine.TIMER=DEBUG
-log4j.logger.org.thymeleaf.TemplateEngine.cache.TEMPLATE_CACHE=DEBUG
-log4j.logger.org.thymeleaf.TemplateEngine.cache.FRAGMENT_CACHE=DEBUG
-log4j.logger.org.thymeleaf.TemplateEngine.cache.MESSAGE_CACHE=DEBUG
-log4j.logger.org.thymeleaf.TemplateEngine.cache.EXPRESSION_CACHE=DEBUG
-log4j.logger.thymeleafexamples=DEBUG
-log4j.logger.org.thymeleaf.*=ERROR
+log4j.logger.org.thymeleaf.TemplateEngine.cache.*=DEBUG
+log4j.logger.springframework.ui.* = DEBUG
+log4j.logger.springframework.web.* = DEBUG
+log4j.logger.org.hibernate = ERROR
