Modifica definitiva alla gestione dei file...adesso implementata con chiamata AJAX

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -15,10 +15,11 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{HH:mm:ss.SSS} [%t] - %5p - %C{8} - %m%n
 
 # logging levels
-log4j.logger.org.thymeleaf=DEBUG
 log4j.logger.org.thymeleaf.TemplateEngine.CONFIG=DEBUG
 log4j.logger.org.thymeleaf.TemplateEngine.TIMER=DEBUG
 log4j.logger.org.thymeleaf.TemplateEngine.cache.*=DEBUG
+log4j.logger.org.thymeleaf.*=ERROR
 log4j.logger.springframework.ui.* = DEBUG
 log4j.logger.springframework.web.* = DEBUG
 log4j.logger.org.hibernate = ERROR
+log4j.logger.org.springframework.security.level=DEBUG
