--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,7 +1,7 @@
 # Root logger option
 log4j.rootLogger=INFO, file, stdout
 
-log4j.appender.file.File=c:\\pippo.log
+log4j.appender.file.File=c:\\ecm.log
 log4j.appender.file=org.apache.log4j.RollingFileAppender
 log4j.appender.file.MaxFileSize=10240KB
 log4j.appender.file.MaxBackupIndex=5
