--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -7,6 +7,7 @@ log4j.appender.file.MaxFileSize=10240KB
 log4j.appender.file.MaxBackupIndex=5
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d [%t] %5p - %m%n
+log4j.appender.file.Threshold=INFO
 
 # Direct log messages to stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
@@ -15,11 +16,19 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{HH:mm:ss.SSS} [%t] - %5p - %C{8} - %m%n
 
 # logging levels
-log4j.logger.org.thymeleaf.TemplateEngine.CONFIG=DEBUG
-log4j.logger.org.thymeleaf.TemplateEngine.TIMER=DEBUG
-log4j.logger.org.thymeleaf.TemplateEngine.cache.*=DEBUG
-log4j.logger.org.thymeleaf.*=ERROR
-log4j.logger.springframework.ui.* = DEBUG
-log4j.logger.springframework.web.* = DEBUG
-log4j.logger.org.hibernate = ERROR
-log4j.logger.org.springframework.security.level=DEBUG
+log4j.logger.org.springframework=ERROR
+log4j.logger.org.springframework.context=ERROR
+log4j.logger.org.springframework.security=ERROR
+log4j.logger.org.springframework.core=ERROR
+log4j.logger.org.springframework.mvc=ERROR
+log4j.logger.org.springframework.web=ERROR
+log4j.logger.org.springframework.boot=INFO
+log4j.logger.org.springframework.boot.context=ERROR
+
+log4j.logger.org.hibernate.tool.hbm2ddl=ERROR
+log4j.logger.org.hibernate.type.descriptor.sql.BasicBinder=ERROR
+log4j.logger.org.thymeleaf=ERROR
+#log4j.logger.org.hibernate = INFO
+log4j.logger.it.tredi=DEBUG
+#
+#log4j.logger.org.apache.juli.logging.DirectJDKLog = INFO
