--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 # DATASOURCE
-spring.datasource.url= jdbc:postgresql://localhost:5432/ecmTestDB
-spring.datasource.username=ecm
+spring.datasource.url= jdbc:postgresql://localhost:5432/ecmDB
+spring.datasource.username=ecmdb
 spring.datasource.password=3dinformatica
 
 # JPA
