--- a/src/main/resources/application-demo.properties
+++ b/src/main/resources/application-demo.properties
@@ -1,6 +1,5 @@
 # DATASOURCE
-#spring.datasource.url= jdbc:postgresql://ecmtest.bo.priv:5432/ecmTestDB
-spring.datasource.url= jdbc:postgresql://localhost:5432/test
+spring.datasource.url= jdbc:postgresql://localhost:5432/ecmdb
 spring.datasource.username=ecm
 spring.datasource.password=3dinformatica
 
