--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
 # DATASOURCE
-spring.datasource.url= jdbc:postgresql://localhost:5432/ecmTestDB
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url= jdbc:postgresql://localhost:5432/ecmdb
+spring.datasource.username=ecm
+spring.datasource.password=3dinformatica
 
 # JPA
 spring.jpa.hibernate.ddl-auto=none
