--- a/src/main/resources/application-demo.properties
+++ b/src/main/resources/application-demo.properties
@@ -1,17 +1,11 @@
 # DATASOURCE
-spring.datasource.url= jdbc:postgresql://localhost:5432/ecmdb
+spring.datasource.url= jdbc:postgresql://10.17.61.242:5432/ecmdb
 spring.datasource.username=ecm
 spring.datasource.password=3dinformatica
 
 # JPA
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # THYMELEAF
 spring.thymeleaf.cache: true
-
-# LOGGING
-#logging.file=c:/ecm.log
-logging.level.org.apache.juli.logging.DirectJDKLog = ERROR
-logging.config=classpath:log4j.properties
-logging.level.org.thymeleaf.* ERROR
