--- a/src/main/resources/application-demo.properties
+++ b/src/main/resources/application-demo.properties
@@ -8,4 +8,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # THYMELEAF
-spring.thymeleaf.cache: true
+spring.thymeleaf.cache: false
