--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -24,7 +24,7 @@ log4j.logger.org.springframework.mvc=ERROR
 log4j.logger.org.springframework.web=ERROR
 log4j.logger.org.springframework.boot=INFO
 log4j.logger.org.springframework.boot.context=ERROR
-log4j.logger.it.tredi.ecm.service=ERROR
+log4j.logger.it.tredi.ecm.service=DEBUG
 
 log4j.logger.org.hibernate.tool.hbm2ddl=ERROR
 log4j.logger.org.hibernate.type.descriptor.sql.BasicBinder=ERROR
