--- a/src/main/resources/mail-prod.properties
+++ b/src/main/resources/mail-prod.properties
@@ -1,11 +1,11 @@
 # E-MAIL
-mail.host=dns3.bo.priv
+mail.host=mailrelay.farmsanita.intra.rve
 mail.port=25
 mail.protocol=smtp
 
 mail.smtp.auth=false
 mail.smtp.starttls.enable=false
-mail.from=me@bo.prov
+mail.from=segreteriae@ecm.it
 
 mail.username=
 mail.password=
