Aggiunta costante 30 min blocco edit ODG

--- a/src/main/resources/ecm.properties
+++ b/src/main/resources/ecm.properties
@@ -3,3 +3,6 @@ account.expires.days=365
 
 # File size limit (Mb)
 file.multipart.maxFileSize = 5
+
+#limite in minuti prima dello scadere entro cui è modificabile la seduta
+seduta.validation.minutes = 30
