PREPARAZIONE DEMO PER GUI 14/09/2016

--- a/src/main/resources/ecm.properties
+++ b/src/main/resources/ecm.properties
@@ -6,3 +6,9 @@ file.multipart.maxFileSize = 5
 
 #limite in minuti prima dello scadere entro cui è modificabile la seduta
 seduta.validation.minutes = 30
+
+#base url della webapp per link nelle email
+application.baseurl=http://localhost:8080
+
+#email segreteria ECM
+email.segreteriaEcm=segreteria@ecm.it
