--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 # DATASOURCE
-spring.datasource.url= jdbc:postgresql://localhost:5432/ecmdb2
+spring.datasource.url= jdbc:postgresql://localhost:5432/ecmdb
 spring.datasource.username=ecm
 spring.datasource.password=3dinformatica
 
