Riorganizzazione dei files di properties

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -11,3 +11,19 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # THYMELEAF
 spring.thymeleaf.cache: false
+
+############### ECM PROPERTIES ###############
+
+###### E-MAIL ######
+mail.host=dns3.bo.priv
+mail.port=25
+mail.protocol=smtp
+mail.smtp.auth=false
+mail.smtp.starttls.enable=false
+mail.from=me@bo.prov
+mail.username=
+mail.password=
+#base url della webapp per link nelle email
+application.baseurl=http://localhost:8080
+
+##############################################
