--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,17 @@ multipart.maxRequestSize = 20MB
 # LOGGING
 #logging.file=c:/ecm.log
 
+
+############### ECM PROPERTIES ###############
+
+#validita' in giorni della password
+account.expires.days=365
+
+# File size limit (Mb)
+file.multipart.maxFileSize = 5
+
+#limite in minuti prima dello scadere entro cui è modificabile la seduta
+seduta.validation.minutes = 30
+
+#email segreteria ECM
+email.segreteriaEcm=segreteria@ecm.it
