--- a/src/main/resources/application-demo.properties
+++ b/src/main/resources/application-demo.properties
@@ -9,3 +9,20 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # THYMELEAF
 spring.thymeleaf.cache: false
+
+############### ECM PROPERTIES ###############
+
+###### E-MAIL ######
+mail.host=dns3.bo.priv
+mail.port=25
+mail.protocol=smtp
+mail.smtp.auth=false
+mail.smtp.starttls.enable=false
+mail.from=me@bo.prov
+mail.username=
+mail.password=
+#base url della webapp per link nelle email
+application.baseurl=http://ecmtest.demo.3di.it/ecm/
+
+##############################################
+
