--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -15,3 +15,19 @@ spring.thymeleaf.cache: true
 logging.level.org.apache.juli.logging.DirectJDKLog = ERROR
 logging.config=classpath:log4j.properties
 logging.level.org.thymeleaf.* ERROR
+
+############### ECM PROPERTIES ###############
+
+###### E-MAIL ######
+mail.host=mailrelay.farmsanita.intra.rve
+mail.port=25
+mail.protocol=smtp
+mail.smtp.auth=false
+mail.smtp.starttls.enable=false
+mail.from=segreteriae@ecm.it
+mail.username=
+mail.password=
+#base url della webapp per link nelle email
+application.baseurl=
+
+##############################################
