--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -15,3 +15,12 @@ spring.thymeleaf.cache: true
 logging.level.org.apache.juli.logging.DirectJDKLog = ERROR
 logging.config=classpath:log4j.properties
 logging.level.org.thymeleaf.* ERROR
+
+# Workflow
+#bonita.bonitaviewserverurl=http://127.0.0.1:9999/bonitaview
+bonita.serverurl=http://127.0.0.1:9999
+bonita.applicationname=bonita
+bonita.admin.username=adm
+bonita.admin.password=pwd
+bonita.users.password=pwd
+bonita.createaccountonlogin=true
