--- a/src/main/resources/application-demo.properties
+++ b/src/main/resources/application-demo.properties
@@ -9,3 +9,12 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # THYMELEAF
 spring.thymeleaf.cache: false
+
+# Workflow
+#bonita.bonitaviewserverurl=http://127.0.0.1:9999/bonitaview
+bonita.serverurl=http://127.0.0.1:9999
+bonita.applicationname=bonita
+bonita.admin.username=adm
+bonita.admin.password=pwd
+bonita.users.password=pwd
+bonita.createaccountonlogin=true
