--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -11,3 +11,12 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # THYMELEAF
 spring.thymeleaf.cache: false
+
+# Workflow
+#bonita.bonitaviewserverurl=http://127.0.0.1:9999/bonitaview
+bonita.serverurl=http://127.0.0.1:9999
+bonita.applicationname=bonita
+bonita.admin.username=adm
+bonita.admin.password=pwd
+bonita.users.password=pwd
+bonita.createaccountonlogin=true
