Integrazione Bonita 7 + ECM WIP

--- a/src/main/resources/application-demo.properties
+++ b/src/main/resources/application-demo.properties
@@ -11,11 +11,11 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.thymeleaf.cache: false
 
 # Workflow
-#bonita.bonitaviewserverurl=http://127.0.0.1:9999/bonitaview
+bonita.bonitaviewserverurl=http://127.0.0.1:9999/bonitaview
 bonita.serverurl=http://127.0.0.1:9999
 bonita.applicationname=bonita
-bonita.admin.username=adm
-bonita.admin.password=pwd
+bonita.admin.username=admin
+bonita.admin.password=admin
 bonita.users.password=pwd
 bonita.createaccountonlogin=true
 
