--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -13,11 +13,11 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.thymeleaf.cache: false
 
 # Workflow
-#bonita.bonitaviewserverurl=http://127.0.0.1:9999/bonitaview
-bonita.serverurl=http://127.0.0.1:9999
+bonita.bonitaviewserverurl=http://127.0.0.1:9980/bonitaview
+bonita.serverurl=http://127.0.0.1:9980
 bonita.applicationname=bonita
-bonita.admin.username=adm
-bonita.admin.password=pwd
+bonita.admin.username=admin
+bonita.admin.password=admin
 bonita.users.password=pwd
 bonita.createaccountonlogin=true
 
