--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -17,11 +17,11 @@ logging.config=classpath:log4j.properties
 logging.level.org.thymeleaf.* ERROR
 
 # Workflow
-#bonita.bonitaviewserverurl=http://127.0.0.1:9999/bonitaview
+bonita.bonitaviewserverurl=http://127.0.0.1:9999/bonitaview
 bonita.serverurl=http://127.0.0.1:9999
 bonita.applicationname=bonita
-bonita.admin.username=adm
-bonita.admin.password=pwd
+bonita.admin.username=admin
+bonita.admin.password=admin
 bonita.users.password=pwd
 bonita.createaccountonlogin=true
 logging.level.org.thymeleaf.* ERROR
