Integrazione con Bonita in esecuzione...RICHIESTA_INTEGRAZIONE

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -13,8 +13,8 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.thymeleaf.cache: false
 
 # Workflow
-bonita.bonitaviewserverurl=http://127.0.0.1:9980/bonitaview
-bonita.serverurl=http://127.0.0.1:9980
+bonita.bonitaviewserverurl=http://localhost:9980/bonitaview
+bonita.serverurl=http://localhost:9980
 bonita.applicationname=bonita
 bonita.admin.username=admin
 bonita.admin.password=admin
