Corrette properties relativa al workflow per la demo 3di

--- a/src/main/resources/application-demo.properties
+++ b/src/main/resources/application-demo.properties
@@ -11,12 +11,12 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.thymeleaf.cache: false
 
 # Workflow
-bonita.bonitaviewserverurl=http://127.0.0.1:9999/bonitaview
-bonita.serverurl=http://127.0.0.1:9999
+bonita.bonitaviewserverurl=http://ecmtest.bo.priv:18080/bonitaview
+bonita.serverurl=http://ecmtest.bo.priv:18080
 bonita.applicationname=bonita
 bonita.admin.username=admin
 bonita.admin.password=admin
-bonita.users.password=pwd
+bonita.users.password=pwddemo
 bonita.createaccountonlogin=true
 
 ############### ECM PROPERTIES ###############
