Due giri fatti...sembra quasi tutto OK

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -24,7 +24,7 @@ bonita.createaccountonlogin=true
 ############### ECM PROPERTIES ###############
 
 ###### E-MAIL ######
-mail.host=dns3.bo.priv
+mail.host=localhost
 mail.port=25
 mail.protocol=smtp
 mail.smtp.auth=false
@@ -34,5 +34,6 @@ mail.username=
 mail.password=
 #base url della webapp per link nelle email
 application.baseurl=http://localhost:8080
+debugTestMode=true
 
 ##############################################
