--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,3 +36,7 @@ seduta.validation.minutes = 30
 
 #email segreteria ECM
 email.segreteriaEcm=segreteria@ecm.it
+
+#debugTestMode default=false se attivata permette di visualizzare una serie di comandi per agevolare la fase di test
+#esempio...mette si a tutte le valutazioni....
+debugTestMode=false
