--- a/src/main/resources/liquibase/liquibase.properties
+++ b/src/main/resources/liquibase/liquibase.properties
@@ -1,7 +1,7 @@
 changeLogFile=src/main/resources/liquibase/master-changeLog.xml
 driver=org.postgresql.Driver
 #Database da controllare per realizzare i diff quando si lancia il comando per generare i files da mettere nel master-changelog.xml
-url=jdbc:postgresql://localhost/ecmTestDB
+url=jdbc:postgresql://localhost/ecmdb
 defaultSchemaName=
 username=ecm
 password=3dinformatica
