costante giorni validi per integrazione

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,3 +40,9 @@ email.segreteriaEcm=segreteria@ecm.it
 #debugTestMode default=false se attivata permette di visualizzare una serie di comandi per agevolare la fase di test
 #esempio...mette si a tutte le valutazioni....
 debugTestMode=false
+
+#giorni minimi in cui il provider può effettuare l'integrazione (utilizzato per popolare la select)
+giorni.integrazione.min=5
+
+#giorni massimi in cui il provider può effettuare l'integrazione (utilizzato per popolare la select)
+giorni.integrazione.max=20
