--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,11 @@
 			<artifactId>Bonita7APIWrapper</artifactId>
 			<version>1.0.1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>itextpdf</artifactId>
+			<version>5.5.9</version>
+		</dependency>
 		
 	</dependencies>
 
