numero dei referee che devono valutare settato a 3

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,10 +29,10 @@ multipart.maxRequestSize = 20MB
 account.expires.days=365
 
 # File size limit (Mb)
-file.multipart.maxFileSize = 2
+file.multipart.maxFileSize=2
 
 #limite in minuti prima dello scadere entro cui è modificabile la seduta
-seduta.validation.minutes = 30
+seduta.validation.minutes=30
 
 #email segreteria ECM
 email.segreteriaEcm=segreteria@ecm.it
@@ -46,3 +46,6 @@ giorni.integrazione.min=5
 
 #giorni massimi in cui il provider può effettuare l'integrazione (utilizzato per popolare la select)
 giorni.integrazione.max=20
+
+#numero referee da selezionare
+numero.referee=3
