--- a/pom.xml
+++ b/pom.xml
@@ -159,6 +159,16 @@
 		    <artifactId>commons-csv</artifactId>
 		    <version>1.3</version>
 		</dependency>		
+		<dependency>
+		    <groupId>org.bouncycastle</groupId>
+		    <artifactId>bcprov-jdk16</artifactId>
+		    <version>1.46</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.bouncycastle</groupId>
+		    <artifactId>bcmail-jdk16</artifactId>
+		    <version>1.46</version>
+		</dependency>		
 		
 	</dependencies>
 
