--- a/pom.xml
+++ b/pom.xml
@@ -154,6 +154,11 @@
 			<artifactId>itextpdf</artifactId>
 			<version>5.5.9</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-csv</artifactId>
+		    <version>1.3</version>
+		</dependency>		
 		
 	</dependencies>
 
