WIP file con path su filesystem

--- a/src/main/resources/application-demo.properties
+++ b/src/main/resources/application-demo.properties
@@ -32,6 +32,8 @@ mail.username=
 mail.password=
 #base url della webapp per link nelle email
 application.baseurl=http://ecmtest.demo.3di.it/ecm/
+#directory per salvare i files
+fileRootPath=/opt/3di.it/ecmFiles
 
 ##############################################
 
