--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -35,5 +35,7 @@ mail.password=
 #base url della webapp per link nelle email
 application.baseurl=http://localhost:8080
 debugTestMode=true
+#directory per salvare i files
+fileRootPath=c:\\ecm\\files
 
 ##############################################
