gestione invio report xml cogeaps

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -38,4 +38,13 @@ debugTestMode=true
 #directory per salvare i files
 fileRootPath=c:\\ecm\\files
 
+########## Co.Ge.A.P.S. #########
+cogeaps.protocol=http
+cogeaps.host=application2.cogeaps.it
+cogeaps.port=8090
+cogeaps.rest_service.carica=/app/api/evento/carica
+cogeaps.rest_service.stato_elaborazione=/app/api/evento/statoelaborazione
+cogeaps.username=ente_050
+cogeaps.password=superadmin
+
 ##############################################
