--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -40,4 +40,13 @@ mail.password=
 #base url della webapp per link nelle email
 application.baseurl=
 
+########## Co.Ge.A.P.S. #########
+cogeaps.protocol=http
+cogeaps.host=???
+cogeaps.port=-1
+cogeaps.rest_service.carica=/app/api/evento/carica
+cogeaps.rest_service.stato_elaborazione=/app/api/evento/statoelaborazione
+cogeaps.username=???
+cogeaps.password=???
+
 ##############################################
