--- a/src/main/resources/application-demo.properties
+++ b/src/main/resources/application-demo.properties
@@ -37,3 +37,15 @@ fileRootPath=/opt/3di.it/ecmFiles
 
 ##############################################
 
+
+########## Co.Ge.A.P.S. #########
+cogeaps.protocol=http
+cogeaps.host=application2.cogeaps.it
+cogeaps.port=8090
+cogeaps.rest_service.carica=/app/api/evento/carica
+cogeaps.rest_service.stato_elaborazione=/app/api/evento/statoelaborazione
+cogeaps.username=ente_050
+cogeaps.password=superadmin
+
+##############################################
+
