Validator RES WIP

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -49,3 +49,9 @@ giorni.integrazione.max=20
 
 #numero referee da selezionare
 numero.referee=3
+
+#numero giorni minimi necessari per poter inserire evento (provider A)
+giorni.min.evento.provider.A=15
+
+#numero giorni minimi necessari per poter inserire evento (provider B)
+giorni.min.evento.provider.B=30
