--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -55,3 +55,6 @@ giorni.min.evento.provider.A=15
 
 #numero giorni minimi necessari per poter inserire evento (provider B)
 giorni.min.evento.provider.B=30
+
+#numero responsabili scientifici evento massimi
+numero.massimo.responsabili.evento=3
