aggiunte altre property

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -62,6 +62,9 @@ numero.massimo.responsabili.evento=3
 #giorni massimi durata evento FSC
 giorni.max.evento.fsc=730
 
+#giorni massimi durata evento FAD
+giorni.max.evento.fad=365
+
 #numero minimo dei partecipanti all'evento convegno congresso RES
 numero.minimo.partecipanti.convegno.congresso.res=200
 
