--- a/src/main/resources/application-tom.properties
+++ b/src/main/resources/application-tom.properties
@@ -1,5 +1,5 @@
 # DATASOURCE
-spring.datasource.url= jdbc:postgresql://10.17.61.242:5432/ecmdb-thom
+spring.datasource.url= jdbc:postgresql://localhost:5432/ecmdb
 spring.datasource.username=ecm
 spring.datasource.password=3dinformatica
 
