--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -48,3 +48,24 @@ cogeaps.username=ente_050
 cogeaps.password=superadmin
 
 ##############################################
+
+############### ECM PROPERTIES ###############
+#Parametri per connettersi al servizio (diverso tra test e produzione)
+ipa=C_D530
+password=password
+#Id servizio assegnato da MyPay
+servizio=005
+#Endpoint (diverso tra test e produzione)
+endpoint.pagamenti=https://paygov.collaudo.regione.veneto.it/pa/services/PagamentiTelematiciDovutiPagati
+#Specifico in base a cosa pago - da concordare con RVE e Mola
+datispecifici.riscossione=9/123456
+#Da aggiornare con il dato definitivo (da concordare con Regione)
+tipo.dovuti=ALTRO
+proxy.attivo=false
+proxy.host
+proxy.port
+#PER ALCUNI PROXY POTREBBE ANCHE NON ESSERE VALORIZZATO. IN EFFETTO DOVREBBE ESSERE COSI' PER QUELLO DI REGIONE
+proxy.username
+proxy.password
+
+##############################################
