Implementato il TaskExecutor per l'esecuzione delle attivita automatiche e temporizzate nel thread in background

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -94,6 +94,17 @@ durata.minima.progetti.miglioramento.fsc=8
 
 ########################################################
 
+
+############### THREAD PROPERTIES ############
+
+thread.corePoolSize=5
+thread.maxPoolSize=10
+thread.queueCapacity=25
+thread.threadNamePrefix=ecm-scheduled-tasks-thread-
+thread.waitForTasksToCompleteOnShutdown=true
+
+##############################################
+
 ############### ENGINEERING PROPERTIES ###############
 #Parametri per connettersi al servizio (diverso tra test e produzione)
 ipa=C_D530
