--- a/pom.xml
+++ b/pom.xml
@@ -168,8 +168,14 @@
 		    <groupId>org.bouncycastle</groupId>
 		    <artifactId>bcmail-jdk16</artifactId>
 		    <version>1.46</version>
-		</dependency>		
-		
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>
+				spring-boot-starter-data-elasticsearch
+			</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
