--- a/pom.xml
+++ b/pom.xml
@@ -176,6 +176,10 @@
 				spring-boot-starter-data-elasticsearch
 			</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-jersey</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
