debugMode = true in demo

--- a/src/main/resources/application-demo.properties
+++ b/src/main/resources/application-demo.properties
@@ -21,6 +21,8 @@ bonita.createaccountonlogin=true
 
 ############### ECM PROPERTIES ###############
 
+debugTestMode=true
+
 ###### E-MAIL ######
 mail.host=dns3.bo.priv
 mail.port=25
