modifiche per demo di elisa

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -12,6 +12,8 @@ spring.jpa.properties.hibernate.format_sql=true
 # THYMELEAF
 spring.thymeleaf.cache: false
 
+server.port = 8090
+
 # Workflow
 bonita.bonitaviewserverurl=http://localhost:9980/bonitaview
 bonita.serverurl=http://localhost:9980
@@ -33,7 +35,7 @@ mail.from=me@bo.prov
 mail.username=
 mail.password=
 #base url della webapp per link nelle email
-application.baseurl=http://localhost:8080
+application.baseurl=http://localhost:8090
 debugTestMode=true
 #directory per salvare i files
 fileRootPath=c:\\ecm\\files
