Aggiornamento engineering per muypay regione veneto

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -50,3 +50,25 @@ cogeaps.username=???
 cogeaps.password=???
 
 ##############################################
+
+############### ENGINEERING PROPERTIES ###############
+#Parametri per connettersi al servizio (diverso tra test e produzione)
+ipa=R_VENETO
+password=password
+#Id servizio assegnato da MyPay (IUD)
+servizio=009
+#Endpoint (diverso tra test e produzione)
+endpoint.pagamenti=https://paygov.collaudo.regione.veneto.it/pa/services/PagamentiTelematiciDovutiPagati
+#Specifico in base a cosa pago - da concordare con RVE e Mola
+datispecifici.riscossione=9/123456
+#Da aggiornare con il dato definitivo (da concordare con Regione)
+tipo.dovuto.evento=ECM_SINGOLO_EVENTO
+tipo.dovuto.quotaannua=ECM_QUOTA_ANNUA
+proxy.attivo=false
+proxy.host
+proxy.port
+#PER ALCUNI PROXY POTREBBE ANCHE NON ESSERE VALORIZZATO. IN EFFETTO DOVREBBE ESSERE COSI' PER QUELLO DI REGIONE
+proxy.username
+proxy.password
+
+##############################################
