--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -107,16 +107,17 @@ thread.waitForTasksToCompleteOnShutdown=true
 
 ############### ENGINEERING PROPERTIES ###############
 #Parametri per connettersi al servizio (diverso tra test e produzione)
-ipa=C_D530
+ipa=R_VENETO
 password=password
-#Id servizio assegnato da MyPay
-servizio=005
+#Id servizio assegnato da MyPay (IUD)
+servizio=009
 #Endpoint (diverso tra test e produzione)
 endpoint.pagamenti=https://paygov.collaudo.regione.veneto.it/pa/services/PagamentiTelematiciDovutiPagati
 #Specifico in base a cosa pago - da concordare con RVE e Mola
 datispecifici.riscossione=9/123456
 #Da aggiornare con il dato definitivo (da concordare con Regione)
-tipo.dovuti=ALTRO
+tipo.dovuto.evento=ECM_SINGOLO_EVENTO
+tipo.dovuto.quotaannua=ECM_QUOTA_ANNUA
 proxy.attivo=false
 proxy.host
 proxy.port
