Integrazione Firma Digitale da testare (chiedere configurazione referer)

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -8,6 +8,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.default_schema=ecmdb
 
 # THYMELEAF
 spring.thymeleaf.cache: false
@@ -52,6 +53,9 @@ cogeaps.password=superadmin
 ##############################################
 
 ############### ENGINEERING PROPERTIES ###############
+
+######### MY PAY #########
+
 #Parametri per connettersi al servizio (diverso tra test e produzione)
 ipa=R_VENETO
 password=password
@@ -70,5 +74,11 @@ proxy.port
 #PER ALCUNI PROXY POTREBBE ANCHE NON ESSERE VALORIZZATO. IN EFFETTO DOVREBBE ESSERE COSI' PER QUELLO DI REGIONE
 proxy.username
 proxy.password
+
+
+######### FIRMA DIGITALE #########
+firma.url=https://servizi.collaudo.regione.veneto.it/FirmaWeb/servlet/AdapterHTTP
+firma.idclassificazione=60.00.05.00.00-C.120.21.1.B4
+firma.referer=http://localhost:8080/ecm/*
 
 ##############################################
