--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -125,4 +125,11 @@ proxy.port
 proxy.username
 proxy.password
 
+
+######### FIRMA DIGITALE #########
+firma.url=https://servizi.collaudo.regione.veneto.it/FirmaWeb/servlet/AdapterHTTP
+firma.idclassificazione=60.00.05.00.00-C.120.21.1.B4
+firma.referer=http://localhost:8080/ecm/*
+
+##############################################
 ##############################################
